fix horizontal scroll

--- a/src/components/LeafOverlay.css
+++ b/src/components/LeafOverlay.css
@@ -1,6 +1,8 @@
 .leaf-overlay {
     width: 100vw;
     height: 100vh;
+    top: -20px;
+    margin: -23px;
     position: absolute;
     pointer-events: none;
     z-index: 100;
